<resources>
    <string name="app_name">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_product">Thêm sản phẩm</string>
    <string name="action_bill">Thêm hóa đơn</string>

    <string name="menu_information">Thông tin cửa hàng</string>
    <string name="menu_history">Lịch sử</string>
    <string name="menu_money">Két tiền</string>
    <string name="menu_statistical">Thống kê</string>
    <string name="menu_add">Thêm tài khoản nhân viên</string>
    <string name="menu_print">Máy in</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_bread">Bread</string>
    <string name="title_milk_tea">Milk </string>
    <string name="title_fruit">Fruit</string>

    <string name="user">User name</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSizeM">Size M: 20.000 đ</string>
    <string name="btnSizeL">Size L: 30.000 đ</string>
    <string name="rd1">Giảm 20%</string>
    <string name="rd3">Giảm 50%</string>
    <string name="rd2">Giảm 30%</string>
    <string name="btnAdd">Thêm</string>
    <string name="btnCancel">Hủy</string>
    <string name="activity_name">Danh sách hóa đơn</string>
    <string name="action_list">Danh sách đơn</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="title_activity_menu2">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_empty">Mời nhập tài khoản</string>
    <string name="error_emptypass">Mời nhập mật khẩu</string>
    <string name="lbl_set_profile_photo">Cài đặt ảnh</string>
    <string name="lbl_take_camera_picture">Chụp ảnh</string>
    <string name="lbl_choose_from_gallery">Chọn ảnh từ thư viện</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="notify_empty_title_product">Yêu cầu nhập tên món ăn</string>
    <string name="notify_empty_price1">Yêu cầu nhập giá sản phẩm</string>
    <string name="tvtype">Thể loại</string>
    <string name="tvName">Tên món</string>
    <string name="tvImage">Ảnh</string>
    <string name="tvPrice">Giá</string>
    <string name="tvPrice1">Giá 1</string>
    <string name="tvPrice2">Giá 2</string>
    <string name="tvTopping">Topping</string>
    <string name="tvToppingYes">Có</string>
    <string name="tvToppingNo">Không</string>
    <string name="tvRemember">Nhớ</string>
    <string name="tvForgetPass">Forgot password ?</string>
    <string name="tvType">Loại:</string>
    <string name="tvname">Tên:</string>
    <string name="Delete">Delete</string>
    <string name="key_update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key_all_table">All Table</string>
    <string name="key_use_table">Used Table</string>
    <string name="empty_table">Empty Table</string>
    <string name="key_buy_on">Buy on</string>
    <string name="key_choose_food">Choose food</string>
    <string name="key_all_product">All</string>
    <string name="key_Reselect">Reselect</string>
    <string name="key_xong">Accomplished</string>
    <string name="key_price">Price</string>
    <string name="key_amount">Amount</string>
    <string name="key_note">Note</string>
    <string name="key_total">Total</string>
    <string name="key_Pay">Pay</string>
    <string name="key_Notification">Notification</string>
    <string name="key_reset_password">Change password</string>
    <string name="key_logout">Logout</string>
    <string name="quizLogout">Do you really want to logout?</string>
    <string name="key_old_password">Old Password</string>
    <string name="key_new_password">New password</string>
    <string name="key_reEnter_password">Re_Enter Password</string>
    <string name="key_changePassword">Change Password</string>
    <string name="key_emtry">Data entry required</string>
    <string name="key_Password_does_not_match">Password does not match</string>
    <string name="key_Incorrect_password">Incorrect password</string>
    <string name="key_changePassword_Success">Change Password Success</string>
    <string name="key_search">Search</string>
    <string name="key_Order">Order</string>
</resources>
