<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/shop"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/medicalhistory"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_money"
            android:icon="@drawable/piggybank"
            android:title="@string/menu_money" />
        <item
            android:id="@+id/nav_statistical"
            android:icon="@drawable/barchart"
            android:title="@string/menu_statistical" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/add"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_print"
            android:icon="@drawable/print"
            android:title="@string/menu_print" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
