<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Namnn.AddProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/tvtype"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvType">

        </Spinner>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tvName"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvName"
            android:backgroundTint="@color/edtsoluong" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvImageProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tvImage"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tvImageProduct"
            android:src="@drawable/mrcay" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tvPrice"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice"
            android:layout_marginTop="20dp"
            android:text="@string/tvPrice1"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtPrice1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tvPrice1"
            android:inputType="number"
            android:backgroundTint="@color/edtsoluong" />

        <TextView
            android:id="@+id/tvPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice1"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:text="@string/tvPrice2"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtPrice2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice1"
            android:layout_toRightOf="@+id/tvPrice"
            android:backgroundTint="@color/edtsoluong" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tvTopping"
            android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/rdTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdPrice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvToppingYes" />

            <RadioButton
                android:id="@+id/rdPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tvToppingNo" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnAddProduct"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnAdd"
            android:elevation="10dp"
            android:text="@string/btnAdd"
            android:textAllCaps="false"
            android:textColor="@color/btnstAdd" />

        <Button
            android:id="@+id/btnCancelAdd"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/btnCancel"
            android:elevation="10dp"
            android:text="@string/btnCancel"
            android:textAllCaps="false"
            android:textColor="@color/btnstCancel" />
    </LinearLayout>

</LinearLayout>