<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvSoluong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="Số lượng"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtSoluong"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvSoluong"
            android:backgroundTint="@color/edtsoluong" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Topping"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvTopping">

        </Spinner>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Giá"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/btnSizeM"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:text="@string/btnSizeM"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSizL"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/btnSizeM"
            android:background="@drawable/border"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:text="@string/btnSizeL"
            android:textAllCaps="false" />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <RadioButton
            android:id="@+id/rd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd1" />

        <RadioButton
            android:id="@+id/rd2"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rd1"
            android:text="@string/rd2" />

        <RadioButton
            android:id="@+id/rd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rd1"
            android:text="@string/rd3" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="Ghi chú"
            android:textColor="@color/tvGhichu"
            tools:layout_editor_absoluteY="3dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:inputType="textImeMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btnAdd"
            android:elevation="10dp"
            android:text="@string/btnAdd"
            android:textAllCaps="false"
            android:textColor="@color/btnstAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btnCancel"
            android:elevation="10dp"
            android:text="@string/btnCancel"
            android:textAllCaps="false"
            android:textColor="@color/btnstCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>