<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="20dp">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edtUser"
        android:hint="@string/user"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edtPass"
        android:hint="@string/password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/check"
            android:text="Nhớ"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:text="Quên mật khẩu ?"
            android:textColor="@color/QuenPass"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="6dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@color/btnlogin"
        android:elevation="7dp"
        android:text="@string/btnLogin"
        android:textAllCaps="false"
        android:textColor="@color/btnloginText"
        android:textStyle="bold"
        android:onClick="Login"
        android:layout_gravity="center"/>

</LinearLayout>